--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
           "type": "cppdbg",
           "request": "launch",
           "program": "${workspaceFolder}/smooth",
-          "args": ["scene_bunny.txt", "800", "800"],
+          "args": ["scene_bunny.txt", "800", "800", "0.1"],
           "stopAtEntry": false,
           "cwd": "${workspaceFolder}",
           "environment": [],
